Closed Bug 1852775 Opened 1 year ago Closed 1 year ago

RTX SSRCs are not being configured correctly

Categories

(Core :: WebRTC: Signaling, defect, P2)

defect

Tracking

()

RESOLVED FIXED
119 Branch
Tracking Status
firefox119 --- fixed

People

(Reporter: bwc, Assigned: bwc)

Details

Attachments

(2 files)

This code is spitting out the RTX SSRCs in a random order:

https://searchfox.org/mozilla-central/rev/64eef6b342bca86930caf3ba403c0f8ce621b474/dom/media/webrtc/jsep/JsepTrack.h#172-174

While this code is negotiating them in the way one would expect:

https://searchfox.org/mozilla-central/rev/64eef6b342bca86930caf3ba403c0f8ce621b474/dom/media/webrtc/jsep/JsepTrack.cpp#350-353

We need to be iterating over the SSRCs, and using those to grab the RTX SSRCs in the right order.

Verify that RTX SSRCs are in the same order on the JsepTrack as they are in SDP

Pushed by bcampen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b09f4fc219b0 Test case for bug. r=mjf https://hg.mozilla.org/integration/autoland/rev/d238756ba039 Fix bug where JsepTrack::GetRtcSsrcs got the order wrong. r=mjf
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: