Bug 1852775: Fix bug where JsepTrack::GetRtcSsrcs got the order wrong. r=mjf

Depends on D188040

Differential Revision: https://phabricator.services.mozilla.com/D188041